--- a/src/views/OurStory/OurStory.css
+++ b/src/views/OurStory/OurStory.css
@@ -10,5 +10,12 @@
 }
 
 .story p {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+}
+
+.our-story.content {
+  margin: 0 auto;
+  width: 60%;
+  text-align: center;
+  min-height: 75vh;
 }
