--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 .container {
   max-width: 1903px;
   margin: 0 auto;
-  padding-top: 2rem;
+  padding: 2rem 0 4rem 0;
   min-height: 100vh;
   height: 100%;
   background-image: url('/src/assets/images/lace-top.png'), url('/src/assets/images/lace-bottom.png');
