--- a/src/views/WeddingParty/WeddingParty.css
+++ b/src/views/WeddingParty/WeddingParty.css
@@ -13,12 +13,12 @@
 
 .left {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(1fr));
 }
 
 .right {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(1fr));
 }
 
 .mb-1 {
@@ -26,17 +26,17 @@
 }
 
 .party-card {
-  display: flex;
-  flex-direction: column;
   padding: 2rem;
-  justify-content: center;
-  align-items: center;
+}
+
+.party-card:first-child {
+  grid-column: span 2;
 }
 
 .profile-img {
   margin-bottom: 1rem;
-  height: 100%;
-  width: 100%;
+  height: 15rem;
+  width: 15rem;
   object-fit: cover;
   border-radius: 20px;
 }
