--- a/src/views/VenueInfo/VenueInfo.css
+++ b/src/views/VenueInfo/VenueInfo.css
@@ -1,12 +1,30 @@
 .maps {
   display: flex;
-  width: 90%;
+  width: 100%;
   justify-content: center;
   margin: 0 auto;
+  gap: 1rem;
 }
 
 .venue {
-  width: 50%;
+  width: 60%;
   text-align: center;
 }
 
+.parking {
+  padding: 1rem;
+  width: 20%;
+  text-align: left;
+}
+
+.parking h3 {
+  font-size: 2rem;
+}
+
+.parking ul {
+  list-style-type: none;
+}
+
+.parking li {
+  font-size: 1.5rem;
+}
