adjust container spacing

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ p {
 .container-center {
   padding-top: 2rem;
   width: 100%;
-  margin: 0 auto;
+  margin: 2rem auto;
   text-align: center;
 }
 
