--- a/src/views/Memento/Memento.css
+++ b/src/views/Memento/Memento.css
@@ -13,3 +13,9 @@
   text-decoration: none;
   color: black;
 }
+
+@media screen and (max-width: 768px) {
+  .content p {
+    font-size: 1.25rem;
+  }
+}
