--- a/src/views/OurStory/OurStory.css
+++ b/src/views/OurStory/OurStory.css
@@ -25,3 +25,13 @@
   font-weight: 400;
   font-size: 2rem;
 }
+
+@media screen and (max-width: 768px) {
+  .our-story.content {
+    width: 100%;
+  }
+
+  .story p {
+    font-size: 1rem;
+  }
+}
