--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -50,7 +50,8 @@
   transform: translateY(-50%);
   display: none;
   color:  var(--clr-rose);
-  font-size: 2.5em;
+  font-size: 2rem;
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
