--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,9 @@ img {
 }
 
 @media screen and (max-width: 768px) {
+  .container {
+    padding: 1rem 0 2rem 0;
+  }
   .container-center {
     margin: 1rem auto;
     padding: 0;
