--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -12,17 +12,30 @@
   align-items: center;
 }
 
+.closed {
+  color: white;
+  text-decoration: line-through;
+  font-size: 1.5rem;
+}
+
 .rsvp-btn {
   background-color: var(--clr-rose);
-  color: var(--clr-white);
   border: none;
   padding: 1rem 2rem;
   text-align: center;
-  text-decoration: none;
   display: inline-block;
   font-size: 1.5rem;
   cursor: pointer;
   border-radius: var(--radius);
+}
+
+.greyed {
+  background-color: grey;
+}
+
+.rsvp-btn a {
+  text-decoration: none;
+  color: var(--clr-white);
 }
 
 .home p {
